--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
-		"react-navigation": "^1.0.0-beta.11"
+		"react-navigation": "^1.0.0-beta.11",
+		"react-redux": "^5.0.5"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
